@@ -16,14 +16,20 @@
      ruby/          generated by client's rdoc  before commit work?
 - [ ] Find how to clone postgres datas ?
 **** TODO Create a basic TCP server with a server-ctl tool
+     CLOCK: [2012-11-09 ven. 23:25]--[2012-11-10 sam. 00:15] =>  0:50
      CLOCK: [2012-10-31 mer. 19:51]--[2012-10-31 mer. 20:38] =>  0:47
 - [X] Add boost-asio as dependencies both in configure.in and DEPENDENCIES
 - [X] Need boost_filestem to avoid undefined reference to 
      `boost::system::get_generic_category() error
 - [X] Create a TCP server listening to a default port
-- [ ] server-ctl IP:port using default port if missing
+- [-] server-ctl IP:port using default port if missing
+  - [-] libreadline to get history of command
+    - [X] Must enable auto-completion of commands
+      start, stop, list, help, quit
+    - [ ] basic command should run functions
   - [ ] boost-program_options to read argument
   - [ ] regex to get port and to test for IP
+  - [ ] manpage and texinfo manual for the available commands
 **** DONE Correct project setup
      CLOCK: [2012-05-09 mer. 09:17]--[2012-05-09 mer. 09:25] =>  0:08
      CLOCK: [2012-05-07 lun. 09:42]--[2012-05-07 lun. 10:14] =>  0:32
