@@ -1,3 +1,5 @@
+SUBDIRS=tools
+
 bin_PROGRAMS=rainbrurpg-server
 
 rainbrurpg_server_SOURCES=main.cpp
